# miditoqwerty-rs-Sostenuto

./: Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml  release.yml
src/: main.rs
src/keyboard_provider/: linux.rs  macos.rs  mod.rs  windows.rs
src/keycodes/: mod.rs
src/output_methods/: generic.rs  mod.rs  piano_rooms.rs  pv.rs
