[package]
name = "miditoqwerty-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
evdev = "0.12.2"
midi-event = "0.2.1"
midir = "0.10.0"
winapi = { version = "0.3", features = ["winuser"] }
phf = { version = "0.11", features = ["macros"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.0"
core-graphics = "0.24.0"

[package.metadata.bundle]
name = "Midi to Qwerty"
identifier = "dev.arijanj.miditoqwerty"
version = "1.0"